saas/saas/src/main/java/com/example/saas/api/error/ReservationConflictException.java
package com.example.saas.api.error;

public class ReservationConflictException extends RuntimeException {
    public ReservationConflictException(String message) {
        super(message);
    }
}